open HMR and repair problems

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,8 +14,8 @@
   background: url(../images/react.svg) no-repeat;
 }
 .img2{
-  width: 25%;
-  height: 25%;
+  width: 600px;
+  height: 500px;
   background: url(../images/logo.png) no-repeat;
 }
 .img3{
